--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if object&.errors&.full_messages&.any? %>
-  <div class="alert alert-danger">
+  <div class="row w-50 mx-auto alert alert-danger">
     <ul class="mb-0">
       <% object.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
