--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,6 +1,8 @@
 <div class="col">
-    <div class="card shadow-sm">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+    <div class="card">
+        <% if book.cover.attached? %>
+            <%= cl_image_tag book.cover.key, :width=>414, :height=>600, :crop=>"fill" %>
+        <% end %>
 
         <div class="card-body">
             <p class="card-text">
@@ -8,7 +10,8 @@
             </p>
             <div class="d-flex justify-content-between align-items-center">
                 <%= link_to 'Show', book_path(book), class: 'btn btn-outline-primary' %>
-                
+                <%= link_to 'Delete', book_path(book), class: 'btn btn-outline-danger',
+                    data: {method: :delete, confirm: 'Are you sure?'} %>
             </div>
         </div>
     </div>
