--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,11 @@
 <section class="py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="row gx-4 gx-lg-5 align-items-center">
-            <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." /></div>
+            <div class="col-md-6">
+                <% if @book.cover.attached? %>
+                    <%= cl_image_tag @book.cover.key, :width=>600, :height=>700, :crop=>"fill" %>
+                <% end %>            
+            </div>
             <div class="col-md-6">
                 <h1 class="display-5 fw-bolder"><%= @book.title %></h1>
                     <p class="lead">
