--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<% provide :page_title, 'Books' %>
+<% # provide :page_title, 'Books' %>
 <% currently_at 'Books' %>
 
 <section class="py-2 text-center container">
@@ -14,7 +14,7 @@
     </div>
 </section>
 
-<div class="album py-5 bg-light">
+<div class="album py-4 bg-light">
     <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
             <%= render @books %>
