--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,6 +14,11 @@
                     <p class="lead">
                         <%= sanitize @book.body %>
                     </p>
+                    <div class="btn-group">
+                        <%= link_to 'Edit', edit_book_path(@book), class: 'btn btn-outline-secondary' %>
+                        <%= link_to 'Delete', book_path(@book), class: 'btn btn-outline-danger',
+                            data: {method: :delete, confirm: 'Are you sure?'} %>
+                    </div>
             </div>
         </div>
     </div>
