--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rubyrary</title>
+    <meta charset="utf-8">
+    <title><%= full_title(yield(:page_title)) %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,8 +13,16 @@
 
   <body>
     <%= yield :main_menu %>
-    <main>
+    
+    <div class="row w-50 mx-auto">
+      <% flash.each do |k, v| %>
+        <%= tag.div v, class: "alert alert-#{k}", role: 'alert' %>
+      <% end %>
+    </div>
+
+    <main >
       <%= yield %>
     </main>
+
   </body>
 </html>
