--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@
     <div class="row py-lg-2">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light">Welcome to Rubyrary!</h1>
-        <p class="lead text-muted">The place where you can find any book you want! And even if it is not here, you can upload the book you have and help others to find it!</p>
+        <p class="lead text-muted">The place where you can find any book you want! And even if it is not here, you can upload the book you have and help others to find it 😉</p>
         <p>
           <% if user_signed_in? %>
             <%= link_to 'Upload your book!', new_book_path, class: 'btn btn-primary my-2' %>
